feature: typeorm 0.3.0 and clients seeder

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:start": "docker-compose up -d",
+    "db:seed": "ts-node ./seed.ts",
+    "db:init": "npm run db:start && sleep 10 && npm run db:seed",
     "db:stop": "docker-compose down"
   },
   "dependencies": {
@@ -31,7 +33,8 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sequelize-typescript": "^2.1.5",
-    "typeorm": "0.2.29"
+    "typeorm": "^0.3.17",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
