--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
